<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="image_description">image</string>
    <string name="button_start_text">START</string>
    <string name="text_view_upcoming_exercise_label_text">UPCOMING EXERCISE:</string>
    <string name="text_view_get_ready_for_text">GET READY FOR</string>
    <string name="finish_activity_textview_text_end">END</string>
    <string name="finish_activity_textview_text_congrats">Congratulations!</string>
    <string name="finish_activity_textview_text_completed">You have competed the workout.</string>
    <string name="finish_activity_button_text_finish">FINISH</string>
    <string name="mainactivity_fl_bmi_text">BMI</string>
    <string name="mainactivity_tv_calculator_text">Calculator</string>
    <string name="mainacticity_tv_history_text">History</string>
</resources>