<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/main_screen_padding">

    <ImageView
        android:id="@+id/ivStart"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@id/flStartButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_description"
        android:src="@drawable/img_main_page"
        />

    <FrameLayout
        android:id="@+id/flStartButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/ivStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_screen_text_size"
            android:text="@string/button_start_text"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flStartButton"
        android:background="@drawable/circular_color_accent_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_screen_text_size"
            android:text="@string/mainactivity_fl_bmi_text"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        android:text="@string/mainactivity_tv_calculator_text"
        android:textSize="@dimen/main_screen_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flStartButton"
        android:background="@drawable/circular_color_accent_background"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calendar"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainacticity_tv_history_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/main_screen_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flHistory"
        />

</androidx.constraintlayout.widget.ConstraintLayout>